# ai-internship-agent

./: .dockerignore  .env.compose.example  .env.dev  .env.example  .env.prod  .env.test  .gitignore  AGENTS.md  AGENT_TEAM.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_MEMORY.md  README.md  SECURITY.md  alembic.ini  coverage.xml  docker-compose.test.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.playwright-mcp/: page-2026-04-01T16-06-56-587Z.yml  page-2026-04-01T16-56-21-693Z.yml  page-2026-04-01T16-56-34-845Z.yml  page-2026-04-01T16-56-42-870Z.yml  page-2026-04-01T16-56-51-841Z.yml  page-2026-04-01T16-57-00-619Z.yml
alembic/: README  env.py
configs/: database.yaml  logging.yaml  settings.yaml
docker/: Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  frontend.Dockerfile  nginx.conf
docs/: README.md  api-reference.md  architecture.md  demo-walkthrough.md  deployment.md  developer-guide.md  figma-backend-capability-map.md  frontend-redesign-spec.md  portfolio-backend-overview.md  portfolio-ui-copydeck.md  product-design-spec.md  release-checklist.md  three-tier-architecture.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
memory-bank/: architecture.md  implementation-plan.md  progress.md
scripts/: compose-health.sh  migrate.py  run_tests.bat  run_tests.sh  seed_demo.py  setup.py  start_dev.bat  start_frontend.bat  stop_dev.bat
src/: __init__.py  main.py
(+384 files in other folders)
